@@ -36,7 +36,7 @@ int main(int argc, char** argv)
     catch (std::exception ex)
     {
         Console()<<Console::red<<Console::bold
-            <<"Exception caught: "<<ex.what()<<"\n";
+            <<"Exception caught: "<<ex.what()<<'\n';
         return 1;
     }
 }
