@@ -14,6 +14,8 @@
 #include "Console.hpp"
 #include "DataTransmit.hpp"
 
+#include <iomanip>
+
 using namespace SphereSim;
 using namespace SphereSim::SimulationVariables;
 
@@ -112,5 +114,5 @@ void SimulatedSystem::receiveVariable(SimulationVariables::Variable var,
 void SimulatedSystem::printUpdatedVariable(int var)
 {
     Object::Type type = vars[var].getType();
-    Console()<<"Variable: "<<var<<"\tType: "<<(char)type<<"\n";
+    Console()<<"Variable: "<<std::setw(3)<<var<<" Type: "<<(char)type<<'\n';
 }
